--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -30,8 +30,8 @@
 				</div>
 				<div class="ms-auto pageheader-btn">
 					<ol class="breadcrumb">
-						<li class="breadcrumb-item">Apps</li>
-						<li class="breadcrumb-item"><a href="javascript:void(0);">Projets</a></li>
+						{% comment %} <li class="breadcrumb-item">Apps</li> {% endcomment %}
+						<li class="breadcrumb-item"><a href="javascript:void(0);">Traçage Projets</a></li>
 						<li class="breadcrumb-item active" aria-current="page">Projets</li>
 					</ol>
 				</div>
@@ -84,8 +84,8 @@
 																	</div>
 																	<div class="ms-1">
 																		<h6 class="mb-1"> <a href="project-details/{{ project.project.geozone_id }}/" class="float-start">{{ project.project.project_name }}</a></h6>
-																		<span class="text-muted border-end pe-2 fs-11 float-start mt-1">{{ project.project.project_category }}</span>
-																		<span class="text-teritary ps-1 fs-11">{{ project.project.department }}</span>
+																		<h5><span class="text-muted border-end pe-2 fs-11 float-start mt-1">{{ project.project.project_category }}</span></h5>
+																		<h5><span class="text-teritary border-end pe-2 fs-11 float-start mt-1">{{ project.project.department }}</span></h5>
 																	</div>
 																</div>
 															</div>
@@ -94,28 +94,7 @@
 																	{% comment %} <div class="stars-main me-3">
 																		<i class="fa fa-star text-light star"></i>
 																	</div> {% endcomment %}
-																	<div class="btn-list mx-4">
-																		<a class="btn btn-outline-primary" href="parcelle-new/{{ project.project.geozone_id }}/">Ajouter Parcelle
-																			<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24">
-																				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-																				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-																				<g id="SVGRepo_iconCarrier">
-																					<path d="M400,168H328V112h32V16H264V48H112V16H16v96H48V264H16v96h96V328h72v72H152v96h96V464H400v32h96V400H464V232h32V136H400ZM296,48h32V80H296Zm32,248v32H296V296ZM48,48H80V80H48ZM80,328H48V296H80Zm32-32V264H80V112h32V80H264v32h32V264H264v32ZM216,464H184V432h32Zm248,0H432V432h32ZM432,168h32v32H432Zm0,232H400v32H248V400H216V328h48v32h96V264H328V200h72v32h32Z" 
-																						  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-																				</g>
-																			</svg>
-																		</a>
-																		<a class="btn btn-outline-primary" href="test">Ajouter Equipement
-																			<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="#000000" width="24" height="24">
-																				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-																				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-																				<g id="SVGRepo_iconCarrier">
-																					<path  d="M115.326 16.008l-6.607 6.687-84.652 85.69 5.59 6.53c10.402 12.15 29.93 23.87 51.26 30.993 10.664 3.562 21.715 5.826 32.377 5.492 5.407-.17 10.82-1.064 15.87-2.927 80.876 79.96 159.667 163.084 238.45 246.224-15.764 14.68-32.013 27.47-47.04 36.48 56.644 56.644 126.465 79.034 164.038 55.13 23.05-37.774 1.1-107.81-55.13-164.04-9.788 15.074-22.24 30.962-35.962 46.126L151.966 126.838c6.244-12.63 7.403-27.838 4.406-43.037-4.142-21.013-15.986-42.734-34.397-61.146l-6.647-6.646zm345.05.63c-32.676 47.53-70.88 89.537-116.368 124.258l-37.158-37.158c6.3-16.228 3.107-35.234-9.99-48.332-4.288-4.287-9.257-7.455-14.52-9.68 6.68 16.484 3.194 36.496-10.166 49.856s-32.888 16.36-49.373 9.68c2.225 5.262 5.397 10.234 9.682 14.52h.002c13.455 13.456 32.87 16.743 49.243 9.872l21.287 21.287c-15.632 18.116-31.658 35.568-48.014 52.503l20.088 20.088 48.916-48.915 13.215 13.215-48.917 48.916 18.748 18.748c16.877-16.2 34.298-32.163 52.495-48.02l21.9 21.9c-5.98 16.088-2.7 34.778 10.23 47.708 4.288 4.287 9.26 7.456 14.522 9.68-6.68-16.484-3.194-36.495 10.166-49.856 13.36-13.36 32.888-16.36 49.373-9.68-2.224-5.262-5.396-10.234-9.68-14.52h-.003c-13.62-13.62-33.345-16.814-49.842-9.606l-37.394-37.395c33.954-46.255 77.08-83.34 124.932-115.695l-33.37-33.373zM126.557 58.66c5.788 9.68 9.664 19.54 11.48 28.756 3.294 16.703.142 30.55-8.735 39.428-3.674 3.674-9.08 5.642-16.59 5.877-7.508.236-16.702-1.474-25.872-4.536-7.113-2.376-14.22-5.65-20.625-9.182l60.344-60.342zm79.075 193.522c-51.082 48.22-104.743 92.797-159.567 137.162L17.877 491.98l104.275-27.615c45.657-58.363 88.954-110.13 135.037-158.697-6.167-6.44-12.337-12.876-18.512-19.297L70.445 454.605 57.23 441.39 225.707 272.91c-6.684-6.924-13.376-13.835-20.076-20.73z"
-																							stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-																				</g>
-																			</svg>
-																		</a>
-																	</div>
+																	
 																	<a href="#" class="option-dots" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fe fe-more-vertical"></i></a>
 																	<div class="dropdown-menu dropdown-menu-start">
 																		<a class="dropdown-item" href="{% url 'project-modifier' project.project.id %}"><i class="fe fe-edit me-2"></i> Modifier </a>
@@ -127,6 +106,30 @@
 																	
 																</div>
 															</div>
+														</div>
+													</div>
+													<div class="col-md-12 mt-4">
+														<div class="btn-list mx-4">
+															<a class="btn btn-outline-primary" href="parcelle-new/{{ project.project.geozone_id }}/">Ajouter Parcelle
+																<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="none" width="24" height="24">
+																	<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+																	<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+																	<g id="SVGRepo_iconCarrier">
+																		<path d="M400,168H328V112h32V16H264V48H112V16H16v96H48V264H16v96h96V328h72v72H152v96h96V464H400v32h96V400H464V232h32V136H400ZM296,48h32V80H296Zm32,248v32H296V296ZM48,48H80V80H48ZM80,328H48V296H80Zm32-32V264H80V112h32V80H264v32h32V264H264v32ZM216,464H184V432h32Zm248,0H432V432h32ZM432,168h32v32H432Zm0,232H400v32H248V400H216V328h48v32h96V264H328V200h72v32h32Z" 
+																			  stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+																	</g>
+																</svg>
+															</a>
+															<a class="btn btn-outline-primary" href="test">Ajouter Equipement
+																<svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" fill="#000000" width="24" height="24">
+																	<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+																	<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+																	<g id="SVGRepo_iconCarrier">
+																		<path  d="M115.326 16.008l-6.607 6.687-84.652 85.69 5.59 6.53c10.402 12.15 29.93 23.87 51.26 30.993 10.664 3.562 21.715 5.826 32.377 5.492 5.407-.17 10.82-1.064 15.87-2.927 80.876 79.96 159.667 163.084 238.45 246.224-15.764 14.68-32.013 27.47-47.04 36.48 56.644 56.644 126.465 79.034 164.038 55.13 23.05-37.774 1.1-107.81-55.13-164.04-9.788 15.074-22.24 30.962-35.962 46.126L151.966 126.838c6.244-12.63 7.403-27.838 4.406-43.037-4.142-21.013-15.986-42.734-34.397-61.146l-6.647-6.646zm345.05.63c-32.676 47.53-70.88 89.537-116.368 124.258l-37.158-37.158c6.3-16.228 3.107-35.234-9.99-48.332-4.288-4.287-9.257-7.455-14.52-9.68 6.68 16.484 3.194 36.496-10.166 49.856s-32.888 16.36-49.373 9.68c2.225 5.262 5.397 10.234 9.682 14.52h.002c13.455 13.456 32.87 16.743 49.243 9.872l21.287 21.287c-15.632 18.116-31.658 35.568-48.014 52.503l20.088 20.088 48.916-48.915 13.215 13.215-48.917 48.916 18.748 18.748c16.877-16.2 34.298-32.163 52.495-48.02l21.9 21.9c-5.98 16.088-2.7 34.778 10.23 47.708 4.288 4.287 9.26 7.456 14.522 9.68-6.68-16.484-3.194-36.495 10.166-49.856 13.36-13.36 32.888-16.36 49.373-9.68-2.224-5.262-5.396-10.234-9.68-14.52h-.003c-13.62-13.62-33.345-16.814-49.842-9.606l-37.394-37.395c33.954-46.255 77.08-83.34 124.932-115.695l-33.37-33.373zM126.557 58.66c5.788 9.68 9.664 19.54 11.48 28.756 3.294 16.703.142 30.55-8.735 39.428-3.674 3.674-9.08 5.642-16.59 5.877-7.508.236-16.702-1.474-25.872-4.536-7.113-2.376-14.22-5.65-20.625-9.182l60.344-60.342zm79.075 193.522c-51.082 48.22-104.743 92.797-159.567 137.162L17.877 491.98l104.275-27.615c45.657-58.363 88.954-110.13 135.037-158.697-6.167-6.44-12.337-12.876-18.512-19.297L70.445 454.605 57.23 441.39 225.707 272.91c-6.684-6.924-13.376-13.835-20.076-20.73z"
+																				stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+																	</g>
+																</svg>
+															</a>
 														</div>
 													</div>
 													<div class="col-md-12 mt-4">
@@ -149,7 +152,7 @@
 																</p>
 															</div>
 															<div class="raw">
-															<div class="col">
+															<div class="col-md-12 mt-4">
 																{% for parcelle in project.parcelles %}
 																	<button class="parcelle" onclick="window.location.href='parcelle-details/{{ parcelle.geozone_id }}/'">
 																		{{ parcelle.parcelle_name }}
@@ -159,7 +162,7 @@
 															</div> 
 														</div>
 													</div>
-													<div class="col-md-12 mt-4">
+													{% comment %} <div class="col-md-12 mt-4">
 														<div class="text-center d-f-ai-c-jc-c">
 															<div class="wp-100">
 																<div class="project-percentage small-bar small-lg">
@@ -173,7 +176,7 @@
 																</div>
 															</div>
 														</div>
-													</div>
+													</div> {% endcomment %}
 												</div>
 											</div>
 										</div>
@@ -199,9 +202,21 @@
 
     {% block scripts %}
 
-		<script>
-			function confirmDelete(projectId) {
-				if (confirm("Êtes-vous sûr de vouloir supprimer ce projet?")) {
+	<script>
+		function confirmDelete(projectId) {
+			// Utilisation de SweetAlert pour la confirmation
+			Swal.fire({
+				title: 'Êtes-vous sûr ?',
+				text: "Voulez-vous vraiment supprimer ce projet ? Cette action est irréversible.",
+				icon: 'warning',
+				showCancelButton: true,
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'Oui, supprimer',
+				cancelButtonText: 'Annuler'
+			}).then((result) => {
+				if (result.isConfirmed) {
+					// Si l'utilisateur confirme la suppression
 					fetch("{% url 'delete_project' project_id=0 %}".replace(/0/, projectId), {
 						method: 'POST',
 						headers: {
@@ -209,20 +224,39 @@
 						}
 					}).then(response => {
 						if (response.ok) {
-							// Rediriger vers la page des projets ou mettre à jour la page
-							window.location.href = "/projects";
+							// Afficher un message de succès avec SweetAlert
+							Swal.fire({
+								icon: 'success',
+								title: 'Supprimé !',
+								text: 'Le projet a été supprimé avec succès.',
+								timer: 1500,
+								showConfirmButton: false
+							}).then(() => {
+								// Rediriger ou rafraîchir la page après la suppression
+								window.location.href = "/projects";
+							});
 						} else {
-							alert("Une erreur s'est produite lors de la suppression du projet.");
+							// Afficher un message d'erreur en cas de problème
+							Swal.fire({
+								icon: 'error',
+								title: 'Erreur',
+								text: 'Une erreur s\'est produite lors de la suppression du projet.'
+							});
 						}
 					}).catch(error => {
-						alert("Une erreur réseau s'est produite: ", error);
+						Swal.fire({
+							icon: 'error',
+							title: 'Erreur réseau',
+							text: 'Une erreur réseau s\'est produite: ' + error
+						});
 					});
-					return true;
 				}
-				return false;
-			}
-		</script>
-
+			});
+			return false; // Pour éviter la navigation immédiate
+		}
+	</script>
+	
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<!-- PROJECT JS-->
 		<script src=" {% static 'assets/js/projects.js' %} "></script>
 
