--- a/app/templates/project-new-form.html
+++ b/app/templates/project-new-form.html
@@ -136,7 +136,7 @@
                             </div>
 							<div class="col-sm-12 col-md-12 col-xl-4">
 								<div class="form-group note-form-group note-group-select-from-files">
-									<label for="image" class="form-label text-muted">Sélectionner une image :</label>
+									<label for="" class="form-label text-muted">Sélectionner une image :</label>
 									<input id="image" type="file" name="image" accept="image/*" class="form-control-file note-form-control note-input">
 								</div>
 							</div>
